--- a/style.css
+++ b/style.css
@@ -206,6 +206,9 @@ body {
     .header h1 {
         font-size: 2rem; /* Adjust header font size */
     }
+    .header p{
+        font-size: 0.9rem;
+    }
 
     .container {
         width: 95%;
@@ -220,29 +223,24 @@ body {
     }
 
     .profile-pic {
-        width: 120px;
-        height: 120px;
-    }
-
-    .right-section{
-        width: 65%;
-
+        width: 100px;
+        height: 100px;
     }
     
     .right-section h1 {
-        font-size: 30px; /* Slightly smaller font for heading */
+        font-size: 27px; /* Slightly smaller font for heading */
     }
     
     .right-section h2 {
-        font-size: 13px; /* Adjust subheading size */
+        font-size: 12px; /* Adjust subheading size */
     }
 
     .contact-details h3, .skills h3 {
-        font-size: 11px;
+        font-size: 10px;
     }
 
     .contact-details p , .skills li, .profile li, .experience li, .education li , .profile p {
-        font-size: 9px;
+        font-size: 8px;
     }
 
     .profile h3, .experience h3, .education h3 {
