--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ body {
     
     .right-section h1 {
         font-size: 27px; /* Slightly smaller font for heading */
-        margin-bottom: 3px;
+        margin-bottom: 0;
     }
     
     .right-section h2 {
