--- a/style.css
+++ b/style.css
@@ -231,6 +231,7 @@ body {
     
     .right-section h1 {
         font-size: 27px; /* Slightly smaller font for heading */
+        margin-top: 15px;
         margin-bottom: 0;
     }
     
